# fastapi-crud

./: README.md  env.sample  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: e5a54732c409_create_todos_table.py
app/: main.py
app/api/v1/: todo.py
app/core/: config.py
app/db/: db.py  schema.py
app/models/: todo.py
app/services/: mail_service.py  todo_service.py
